[package]
name = "port-forward"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "port-forward-server"
path = "src/bin/server.rs"

[[bin]]
name = "port-forward-client"
path = "src/bin/client.rs"

[dependencies]
byteorder = "1"
uuid = "0.8"
rand = "0.8"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"]}
rlua = "0.18"
